# rps-multiplayer

./: .gitignore  docker-compose.yml  pnpm-lock.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py  utils.py
backend/src/core/: config.py  database.py  redis_client.py
backend/src/rooms/: router.py  schemas.py  services.py
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  types.ts  utils.ts
